@@ -37,6 +37,8 @@
     are no longer corrupted/cut off.  This includes properly supporting the
     2600-daptor II, which is flashable to an AVox-USB converter.
 
+  * Added QuadTari controller support for josticks (TODO: doc, settings etc.)
+
   * Added option to select the audio device.
 
   * Added option to display detected settings info when a ROM is loaded.
